Teil A/Buchszenarien/Kapitel02-04/little-crab-5/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\extensions\greenfoot.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\bluejcore.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\bluejeditor.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\bluejext.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\AppleJavaExtensions.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\junit-4.11.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\hamcrest-core-1.3.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\bluej.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\diffutils-1.2.1.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\commons-httpclient-3.1.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\commons-codec-1.3.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\jl1.0.1.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\opencsv-2.3.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\xom-1.2.9.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\lang-stride.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\guava-17.0.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\javassist-3.18.0.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\commons-vfs2-2.0.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\httpclient-4.1.1.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\httpcore-4.1.jar;C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\httpmime-4.1.1.jar;\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5
-d
\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Users\michael\Desktop\9 Progs\Greenfoot-windows-310\greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\CrabWorld.java
<---- end of javadoc command ---->
Loading source file \\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\CrabWorld.java...
\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\CrabWorld.java:11: error: unmappable character for encoding UTF-8
     * Gr??e von 560x560 Zellen, wobei jede Zelle nur 1 Pixel
         ^
\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\CrabWorld.java:11: error: unmappable character for encoding UTF-8
     * Gr??e von 560x560 Zellen, wobei jede Zelle nur 1 Pixel
          ^
\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\CrabWorld.java:12: error: unmappable character for encoding UTF-8
     * gro? ist. 
          ^
\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\CrabWorld.java:21: error: unmappable character for encoding UTF-8
     * Bereitet die Welt f?r den Programmstart vor. Das hei?t: erzeugt die 
                          ^
\\psf\Host\Data\OneDrive - TBZ\Schule 1\2TBZ\226 OO BV\2 - Unterlagen BI\Scenarios\buchszenarien_de\Kapitel02-04\little-crab-5\CrabWorld.java:21: error: unmappable character for encoding UTF-8
     * Bereitet die Welt f?r den Programmstart vor. Das hei?t: erzeugt die 
                                                           ^
5 errors
